--- a/assets/main.css
+++ b/assets/main.css
@@ -1,33 +1,33 @@
- body {
-margin: 0;
-padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  line-height: 1.5;
 }
 
 body {
-width: 100%;
-height: 100vh;
-background: url(freedom.jpg) no-repeat center;
-background-size: cover;
-color: #333;
+  width: 100%;
+  height: 100vh;
+  background: url('freedom.jpg') no-repeat center;
+  background-size: cover;
+  color: #333;
 }
 
 .wrapper {
-padding-top: 4rem;
-width: 90%;
-margin: 0 auto;
-text-align: center;
-
-}
-
-body{
-display: block;
+  padding-top: 4rem;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .quote {
-    font-family: 'Julius Sans One', sans-serif;
-    font-size: 2.5rem;
+  font-family: 'Julius Sans One', sans-serif;
+  font-size: 2.5rem; 
 }
 
 .author {
-font-size: 1.5rem;
+  font-family: 'Crimson Text', serif;
+  font-size: 1.5rem;
+  font-style: italic;
 }
